--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="box">
-                        <div class="row nested">
+                        <div class="row nested-row">
                             <div class="col-2">
                                 <div class="box-2"></div>
                             </div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-6">
                     <div class="box">
-                        <div class="row nested">
+                        <div class="row nested-row">
                             <div class="col-6 ">
                                 <div class="box-2"></div>
                             </div>
@@ -247,6 +247,83 @@
             <div class="row">
                 <div class="col-11 col-offset-1">
                     <div class="box"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row align-start">
+                <div class="col-6">
+                    <div class="box"></div>
+                </div>
+            </div>
+            <div class="row align-center">
+                <div class="col-6">
+                    <div class="box"></div>
+                </div>
+            </div>
+            <div class="row align-end">
+                <div class="col-6">
+                    <div class="box"></div>
+                </div>
+            </div>
+            <div class="row align-top">
+                <div class="col-6">
+                    <div class="box-times-3"></div>
+                </div>
+                <div class="col-6">
+                    <div class="box"></div>
+                </div>
+            </div>
+            <div class="row align-middle">
+                <div class="col-6">
+                    <div class="box-times-3"></div>
+                </div>
+                <div class="col-6">
+                    <div class="box"></div>
+                </div>
+            </div>
+            <div class="row align-bottom">
+                <div class="col-6">
+                    <div class="box-times-3"></div>
+                </div>
+                <div class="col-6">
+                    <div class="box"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="col-12">
+                    <div class="box">
+                        <div class="row nested-row space-between">
+                            <div class="col-2">
+                                <div class="box-2"></div>
+                            </div>
+                            <div class="col-2">
+                                <div class="box-2"></div>
+                            </div>
+                            <div class="col-2">
+                                <div class="box-2"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="box">
+                        <div class="row nested-row space-around">
+                            <div class="col-2">
+                                <div class="box-2"></div>
+                            </div>
+                            <div class="col-2">
+                                <div class="box-2"></div>
+                            </div>
+                            <div class="col-2">
+                                <div class="box-2"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
